Adding photo and more cards

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         </header>
         <div class="card-auther">
           <a href="#" class="card-avatar">
-            <img
-              src="https://cdn.pixabay.com/photo/2016/05/18/16/12/wolves-1400819__340.jpg"
-            />
+            <img src="./imgs/Pheonix.png" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -27,6 +25,18 @@
             Anouar Chlih
           </div>
         </div>
+      </article>
+      <article class="card">
+        <header class="card-header">
+          <p>May 25th 2020</p>
+          <h2>Card tricks are fun. Hi mom!</h2>
+        </header>
+      </article>
+      <article class="card">
+        <header class="card-header">
+          <p>May 25th 2020</p>
+          <h2>Card tricks are fun. Hi mom!</h2>
+        </header>
       </article>
       <article class="card">
         <header class="card-header">
